--- a/index.html
+++ b/index.html
@@ -1,7 +1,41 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<title>Mon CV</title> <!-- title à changer -->
+	</head>
+	<body>
+			<h1>AMBRE VANNEUVILLE</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			<ul><h3>FORMATION</h3>
+					<li><p><strong>01/2020 - En cours</strong></p></li>
+							<p><strong>Développeur Web Junior</strong></p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a egestas est, nec eleifend diam.</br>
+							 Nam in aliquam mauris. Fusce malesuada consequat fermentum. Sed a lorem tincidunt, sagittis</br>
+							neque ut, tristique dui. Phasellus eu molestie ipsum. Sed nisl magna, suscipit sed ligula eget,</br> 
+							eleifend sollicitudin nibh.</p>
+					<li><p><strong>2014 - 2018</strong></p></li>
+							<P><strong>Bac STD2A (mention bien)</strong></br>
+							<em>(Sciences et technologies du design et des arts appliqués)</em></br>
+							Durant cette formation nous avons abordés les notions suivantes sous forme de projets :</br>
+							• Design graphique • Design d’espace • Design de produits • Design de mode</P>
+			<h3>EXPÉRIENCE PROFESSIONELLE</h3>
+					<li><p><strong>02/2019 - 05/2019</strong></p></li>
+							<p><strong>Opératrice de Saisie à Tessi TGD</strong> en sous-traitance pour Pôle Emploi</br>
+							(Chargée de trier, analyser et saisir les informations nécessaires des bulletins de salaire,</br>
+							chèques et attestions Pôle Emploi. Tout cela en respectant les objectifs de productivité</br>
+							quantitatifs et qualitatifs demandés).</p>
+					<li><p><strong>08/2019</strong></p></li>
+							<p>Distribution de Flyers pour Satis Interim</br>
+							Distribution dans le centre-ville de Rennes aux points stratégiques.</p>
+			<h3>PROJET PERSONNEL</h3>
+					<li><p><strong>05/2019 - En cours</strong></p></li> <!-- INFORMATION A ACTUALISER -->
+							<p>Community Manager / Graphiste / Level Designer pour le jeu vidéo Kingdom Of Rhea</br>
+							Je réalise en partie les tâches de:</br>
+							• Community Manager (publications / PUB Facebook, Instagram et Twitter, photographies),</br>
+							• Graphiste (création de visuels comme des succès Steam, bannières de réseaux sociaux),</br>
+							• Level Design (ajouts de contenu sur le jeu grâce au logiciel Unreal Engine).</p>
+			</ul>
+
+	</body>
 </html>
