--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		<link rel="stylesheet" href="Style.css">
 		<title>Mon CV</title> <!-- title à changer -->
 	</head>
 	<body>
-			<h1>AMBRE VANNEUVILLE</h1>
+		<img src="Moi.jpg" alt="Photo d'Ambre Vanneuville">
+			<h1><span class="blue">AMBRE</span> VANNEUVILLE</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			<ul><h3>FORMATION</h3>
 					<li><p><strong>01/2020 - En cours</strong></p></li>
 							<p><strong>Développeur Web Junior</strong></p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a egestas est, nec eleifend diam.</br>
-							 Nam in aliquam mauris. Fusce malesuada consequat fermentum. Sed a lorem tincidunt, sagittis</br>
+							Nam in aliquam mauris. Fusce malesuada consequat fermentum. Sed a lorem tincidunt, sagittis</br>
 							neque ut, tristique dui. Phasellus eu molestie ipsum. Sed nisl magna, suscipit sed ligula eget,</br> 
 							eleifend sollicitudin nibh.</p>
 					<li><p><strong>2014 - 2018</strong></p></li>
@@ -26,7 +28,7 @@
 							chèques et attestions Pôle Emploi. Tout cela en respectant les objectifs de productivité</br>
 							quantitatifs et qualitatifs demandés).</p>
 					<li><p><strong>08/2019</strong></p></li>
-							<p>Distribution de Flyers pour Satis Interim</br>
+							<p><strong>Distribution de Flyers pour Satis Interim</strong></br>
 							Distribution dans le centre-ville de Rennes aux points stratégiques.</p>
 			<h3>PROJET PERSONNEL</h3>
 					<li><p><strong>05/2019 - En cours</strong></p></li> <!-- INFORMATION A ACTUALISER -->
