--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 		<p><img src="Moi.jpg" class="float" alt="Photo d'Ambre Vanneuville">
-			<h1><span class="blue">AMBRE</span> VANNEUVILLE</h1></br>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			<h1><span class="blue">AMBRE</span> VANNEUVILLE</h1></br></p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			<p class="stopfloat"><ul><h3>FORMATION</h3></p>
 					<li><p><strong>01/2020 - En cours</strong></p></li>
 							<p><strong>Développeur Web Junior</strong></p>
