--- a/index.html
+++ b/index.html
@@ -6,38 +6,43 @@
 		<title>Mon CV</title> <!-- title à changer -->
 	</head>
 	<body>
-		<p><img src="Moi.jpg" class="float" alt="Photo d'Ambre Vanneuville">
-			<h1><span class="blue">AMBRE</span> VANNEUVILLE</h1></br></p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			<p class="stopfloat"><ul><h3>FORMATION</h3></p>
-					<li><p><strong>01/2020 - En cours</strong></p></li>
-							<p><strong>Développeur Web Junior</strong></p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a egestas est, nec eleifend diam.</br>
-							Nam in aliquam mauris. Fusce malesuada consequat fermentum. Sed a lorem tincidunt, sagittis</br>
-							neque ut, tristique dui. Phasellus eu molestie ipsum. Sed nisl magna, suscipit sed ligula eget,</br> 
-							eleifend sollicitudin nibh.</p>
-					<li><p><strong>2014 - 2018</strong></p></li>
-							<P><strong>Bac STD2A (mention bien)</strong></br>
-							<em>(Sciences et technologies du design et des arts appliqués)</em></br>
-							Durant cette formation nous avons abordés les notions suivantes sous forme de projets :</br>
-							• Design graphique • Design d’espace • Design de produits • Design de mode</P>
-			<h3>EXPÉRIENCE PROFESSIONELLE</h3>
-					<li><p><strong>02/2019 - 05/2019</strong></p></li>
-							<p><strong>Opératrice de Saisie à Tessi TGD</strong> en sous-traitance pour Pôle Emploi</br>
-							(Chargée de trier, analyser et saisir les informations nécessaires des bulletins de salaire,</br>
-							chèques et attestions Pôle Emploi. Tout cela en respectant les objectifs de productivité</br>
-							quantitatifs et qualitatifs demandés).</p>
-					<li><p><strong>08/2019</strong></p></li>
-							<p><strong>Distribution de Flyers pour Satis Interim</strong></br>
-							Distribution dans le centre-ville de Rennes aux points stratégiques.</p>
-			<h3>PROJET PERSONNEL</h3>
-					<li><p><strong>05/2019 - En cours</strong></p></li> <!-- INFORMATION A ACTUALISER -->
-							<p>Community Manager / Graphiste / Level Designer pour le jeu vidéo Kingdom Of Rhea</br>
-							Je réalise en partie les tâches de:</br>
-							• Community Manager (publications / PUB Facebook, Instagram et Twitter, photographies),</br>
-							• Graphiste (création de visuels comme des succès Steam, bannières de réseaux sociaux),</br>
-							• Level Design (ajouts de contenu sur le jeu grâce au logiciel Unreal Engine).</p>
+		<section>
+			<p><img src="Moi.jpg" class="float" alt="Photo d'Ambre Vanneuville">
+				<h1><span class="blue">AMBRE</span> VANNEUVILLE</h1></br></p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				<!-- article 1 - Formation  -->
+				<p class="stopfloat"><ul><h3>FORMATION</h3></p>
+						<li><p><strong>01/2020 - En cours</strong></p></li>
+								<p><strong>Développeur Web Junior</strong></p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a egestas est, nec eleifend diam.
+								Nam in aliquam mauris. Fusce malesuada consequat fermentum. Sed a lorem tincidunt, sagittis
+								neque ut, tristique dui. Phasellus eu molestie ipsum. Sed nisl magna, suscipit sed ligula eget,
+								eleifend sollicitudin nibh.</p>
+						<li><p><strong>2014 - 2018</strong></p></li>
+								<P><strong>Bac STD2A (mention bien)</strong></br>
+								<em>(Sciences et technologies du design et des arts appliqués)</em></br>
+								Durant cette formation nous avons abordés les notions suivantes sous forme de projets :</br>
+								• Design graphique • Design d’espace • Design de produits • Design de mode</P>
+				<!-- article 2 Experience professionnelle -->
+				<h3>EXPÉRIENCES PROFESSIONELLES</h3>
+						<li><p><strong>02/2019 - 05/2019</strong></p></li>
+								<p><strong>Opératrice de Saisie à Tessi TGD</strong> en sous-traitance pour Pôle Emploi</br>
+								(Chargée de trier, analyser et saisir les informations nécessaires des bulletins de salaire,
+								chèques et attestions Pôle Emploi. Tout cela en respectant les objectifs de productivité
+								quantitatifs et qualitatifs demandés).</p>
+						<li><p><strong>08/2019</strong></p></li>
+								<p><strong>Distribution de Flyers pour Satis Interim</strong></br>
+								Distribution dans le centre-ville de Rennes aux points stratégiques.</p>
+				<!-- article 3 PROJET PERSONNEL -->
+				<h3>PROJET PERSONNEL</h3>
+						<li><p><strong>05/2019 - En cours</strong></p></li> <!-- INFORMATION A ACTUALISER -->
+								<p>Community Manager / Graphiste / Level Designer pour le jeu vidéo Kingdom Of Rhea</br>
+								Je réalise en partie les tâches de:</br>
+								• Community Manager (publications / PUB Facebook, Instagram et Twitter, photographies),</br>
+								• Graphiste (création de visuels comme des succès Steam, bannières de réseaux sociaux),</br>
+								• Level Design (ajouts de contenu sur le jeu grâce au logiciel Unreal Engine).</p>
 			</ul>
+		</section>
 
 	</body>
 </html>
