--- a/index.html
+++ b/index.html
@@ -3,49 +3,63 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="Style.css">
-		<title>Mon CV</title> <!-- title à changer -->
+		<title>CV de Ambre Vanneuville</title>
 	</head>
 	<body>
-		<aside>
+		<section>
+		<header>
 				<p><img src="Moi.jpg" class="float" alt="Photo d'Ambre Vanneuville">
 					<h1><span class="blue">AMBRE</span> VANNEUVILLE</h1></br></p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		</aside>
-		<section>
-				<!-- article 1 - Formation  -->
-			<ul>
+							<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+		</header>
+			<!-- article 1 - Formation  -->
+			<article><ul>
 					<p class="stopfloat"><h3>FORMATION</h3></p>
-						<li><p>01/2020 - En cours</p></li>
-								<p>Développeur Web Junior</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a egestas est, nec eleifend diam.
-								Nam in aliquam mauris. Fusce malesuada consequat fermentum. Sed a lorem tincidunt, sagittis
-								neque ut, tristique dui. Phasellus eu molestie ipsum. Sed nisl magna, suscipit sed ligula eget,
-								eleifend sollicitudin nibh.</p>
-						<li><p>2014 - 2018</p></li>
-								<P>Bac STD2A (mention bien)</br>
-								<em>(Sciences et technologies du design et des arts appliqués)</em></br>
+						<li><p class="bold">01/2020 - En cours</p></li>
+								<p><span class="bold">Développeur Web Junior</span></br>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a egestas est, nec eleifend diam. Nam in aliquam mauris. Fusce malesuada consequat fermentum. Sed a lorem tincidunt, sagittis neque ut, tristique dui. Phasellus eu molestie ipsum. Sed nisl magna, suscipit sed ligula eget, eleifend sollicitudin nibh.</p>
+						<li><p class="bold">2014 - 2018</p></li>
+								<P><span class="bold">Bac STD2A (mention bien)</span></br>
+								(Sciences et technologies du design et des arts appliqués)</br>
 								Durant cette formation nous avons abordés les notions suivantes sous forme de projets :</br>
 								• Design graphique • Design d’espace • Design de produits • Design de mode</P>
-				<!-- article 2 Experience professionnelle -->
+			</ul></article>
+			<!-- article 2 Experience professionnelle -->
+			<article><ul>
 					<h3>EXPÉRIENCES PROFESSIONELLES</h3>
-						<li><p>02/2019 - 05/2019</p></li>
-								<p>Opératrice de Saisie à Tessi TGD en sous-traitance pour Pôle Emploi</br>
-								(Chargée de trier, analyser et saisir les informations nécessaires des bulletins de salaire,
-								chèques et attestions Pôle Emploi. Tout cela en respectant les objectifs de productivité
-								quantitatifs et qualitatifs demandés).</p>
-						<li><p>08/2019</p></li>
-								<p>Distribution de Flyers pour Satis Interim</br>
+						<li><p class="bold">02/2019 - 05/2019</p></li>
+								<p><span class="bold">Opératrice de Saisie à Tessi TGD en sous-traitance pour Pôle Emploi</span></br>
+								(Chargée de trier, analyser et saisir les informations nécessaires des bulletins de salaire, chèques et attestions Pôle Emploi. Tout cela en respectant les objectifs de productivité quantitatifs et qualitatifs demandés).</p>
+						<li><p class="bold">08/2019</p></li>
+								<p><span class="bold">Distribution de Flyers pour Satis Interim</span></br>
 								Distribution dans le centre-ville de Rennes aux points stratégiques.</p>
-				<!-- article 3 PROJET PERSONNEL -->
+			</ul></article>
+			<!-- article 3 PROJET PERSONNEL -->
+			<article><ul>
 					<h3>PROJET PERSONNEL</h3>
-						<li><p>05/2019 - En cours</p></li> <!-- INFORMATION A ACTUALISER -->
-								<p>Community Manager / Graphiste / Level Designer pour le jeu vidéo Kingdom Of Rhea</br>
-								Je réalise en partie les tâches de:</br>
-								• Community Manager (publications / PUB Facebook, Instagram et Twitter, photographies),</br>
-								• Graphiste (création de visuels comme des succès Steam, bannières de réseaux sociaux),</br>
-								• Level Design (ajouts de contenu sur le jeu grâce au logiciel Unreal Engine).</p>
-			</ul>
+						<li><p class="bold">05/2019 - En cours</p></li> <!-- INFORMATION A ACTUALISER -->
+								<p><span class="bold">J'effectue ou ai pu effectuer ces différentes tâches pour jeu vidéo Kingdom Of Rhea:</span></br>
+								• Lead Concept Artist: Choix de la charte graphique pour tout le jeu, recherche historique digital (époque, lieu, bâtiments...).</br>
+								• Chef d'équipe artiste 3D: Managment d'une équipe de 5 modélisateurs.</br>
+								• Level Design: Ajouts de contenu sur Unreal Engine et GitHub.</br>
+								• Community Manager : Publications Facebook, Instagram et Twitter.</br>
+								• Infographiste : Création de visuels comme des succès Steam (pictogramme) , bannières et post de réseaux sociaux, modification du logo...</br>
+								• Evènementiel: Présentation et photographies lors des salons Paris Games Week & Virtual Calais.</p>
+			</ul></article>
 		</section>
-
+			<aside>
+				<!-- Aside coordonées + À propos + etc -->
+				<address>
+								<p>Adresse<br>Rennes, France</p>
+                                <p>Téléphone<br>0000000000</p>
+                                <p>Email<br><a href="ambre.vanneuville@gmail.com">ambre.vanneuville@gmail.com</a></p>
+                </address>
+                    <h3>À propos</h3>
+                    			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a egestas est, nec eleifend diam. Nam in aliquam mauris. Fusce malesuada consequat fermentum. Sed a lorem tincidunt, sagittis neque ut, tristique dui. Phasellus eu molestie ipsum. Sed nisl magna, suscipit sed ligula eget, eleifend sollicitudin nibh.</p>
+                    <h3>LOISIR</h3>
+			</aside>
+		<footer>
+            <p>Exercice réalisé chez Openclassroom</p>
+        </footer>
 	</body>
 </html>
