--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="Style.css">
 		<title>CV de Ambre Vanneuville</title>
+		<script src="https://kit.fontawesome.com/84c6d20721.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 
@@ -13,7 +14,7 @@
 			<div>
 				<article><ul>
 					<div class="right_title">
-					<h3>FORMATION</h3>
+					<h3><i class="fas fa-brain"></i>FORMATION</h3>
 				</div>
 						<li><p class="bold">01/2020 - En cours</p></li>
 								<p><span class="bold">Développeur Web Junior</span></br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a egestas est, nec eleifend diam. Nam in aliquam mauris. Fusce malesuada consequat fermentum. Sed a lorem tincidunt, sagittis neque ut, tristique dui. Phasellus eu molestie ipsum. Sed nisl magna, suscipit sed ligula eget, eleifend sollicitudin nibh.</p>
@@ -23,7 +24,7 @@
 			<!-- article 2 Experience professionnelle -->
 			<article><ul>
 				<div class="right_title">
-					<h3>EXPÉRIENCES PROFESSIONELLES</h3>
+					<h3><i class="fas fa-book"></i>EXPÉRIENCES PROFESSIONELLES</h3>
 				</div>
 						<li><p class="bold">02/2019 - 05/2019</p></li>
 								<p><span class="bold">Opératrice de Saisie à Tessi TGD en sous-traitance pour Pôle Emploi</span></br>(Chargée de trier, analyser et saisir les informations nécessaires des bulletins de salaire, chèques et attestions Pôle Emploi. Tout cela en respectant les objectifs de productivité quantitatifs et qualitatifs demandés).</p>
@@ -33,7 +34,7 @@
 			<!-- article 3 PROJET PERSONNEL -->
 			<article><ul>
 				<div class="right_title">
-					<h3>PROJET PERSONNEL</h3>
+					<h3><i class="fas fa-laptop"></i>PROJET PERSONNEL</h3>
 				</div>
 						<li><p class="bold">05/2019 - En cours</p></li> <!-- INFORMATION A ACTUALISER -->
 								<p><span class="bold">J'effectue ou ai pu effectuer ces différentes tâches pour le jeu vidéo Kingdom Of Rhea:</span></br>• Lead Concept Artist: Choix de la charte graphique pour tout le jeu, recherche historique digital (époque, lieu, bâtiments...).</br>• Chef d'équipe artiste 3D: Managment d'une équipe de 5 modélisateurs.</br>• Level Design: Ajouts de contenu sur Unreal Engine et GitHub.</br>• Community Manager : Publications Facebook, Instagram et Twitter.</br>• Infographiste : Création de visuels comme des succès Steam (pictogramme) , bannières et post de réseaux sociaux, modification du logo...</br>• Evènementiel: Présentation et photographies lors des salons Paris Games Week & Virtual Calais.</p>
@@ -59,7 +60,7 @@
                     <div class="left_title">
                     	<h3>LOISIR</h3>
                     	</div>
-                    	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    	<p><i class="fas fa-camera"></i><i class="fas fa-cat"></i><i class="fas fa-gamepad"></i></p>
              
                 </div>
 			</aside>
