--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
 					<div class="left_title">
                     	<h3>CONTACT</h3>
                     </div>
+                    <div>
 								<p>Adresse<br>Rennes, France</p>
                                 <p>Téléphone<br>0000000000</p>
                                 <p>Email<br><a href="mailto:ambre.vanneuville@gmail.com">ambre.vanneuville@gmail.com</a></p>
+                    </div>
                 
                     <div class="left_title">
                     	<h3>À PROPOS</h3>
