--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	<div id="container">
 		<section>
 			<!-- article 1 - Formation  -->
-			<p><h1><span class="Ambre">AMBRE</span> VANNEUVILLE</h1></br></p>
+			<p><h1><span class="Ambre">AMBRE</span> VANNEUVILLE</h1></p>
+			<p><h2>En formation Développeuse Web</h2></p>
+			<hr>
 				<article><ul>
 					<h3><i class="fas fa-brain"></i>FORMATION</h3>
 					
