--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 	<div id="container">
 		<section>
 			<header>
-			<p><h1><span class="Ambre">AMBRE</span> VANNEUVILLE</h1></p>
-			<p><h2>En formation Développeuse Web</h2></p>
-			<hr>
-		</header>
+				<img src="Moi.jpg" alt="Photo d'Ambre Vanneuville">
+				<p><h1><span class="Ambre">AMBRE</span> VANNEUVILLE</h1></p>
+				<p><h2>En formation Développeuse Web</h2></p>
+				<hr>
+			</header>
 			<!-- article 1 - Formation  -->
 				<article><ul>
 					<h3><i class="fas fa-brain"></i>FORMATION</h3>
