--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="container">
 		<section>
 			<header>
-				<img src="Moi.jpg" alt="Photo d'Ambre Vanneuville">
+				<center><img src="Moi.jpg" alt="Photo d'Ambre Vanneuville"></center>
 				<p><h1><span class="Ambre">AMBRE</span> VANNEUVILLE</h1></p>
 				<p><h2>En formation Développeuse Web</h2></p>
 				<hr>
@@ -30,7 +30,7 @@
 				<div class="alignement">
 						<div class="date"><li><p class="bold">2014 - 2018</br>Rennes</p></li></div>
 						<div class="right_text">
-								<P><span class="bold">Bac STD2A (mention bien)</span></br>(Sciences et technologies du design et des arts appliqués)</br>Durant cette formation nous avons abordés les notions suivantes sous forme de projets :</br>• Design graphique • Design d’espace • Design de produits • Design de mode</P>
+								<P><span class="bold">Bac STD2A (mention bien)</span></br>(Sciences et technologies du design et des arts appliqués)</br>Durant cette formation nous avons abordés les notions suivantes sous forme de projets :</br> Design graphique - Design d’espace - Design de produits - Design de mode</P>
 						</div>
 				</div>
 				
@@ -59,7 +59,7 @@
 				<div class="alignement">
 						<div class="date"> <li><p class="bold">05/2019 - En cours</br>À distance</p></li> </div>
 						<div class="right_text">
-								<p><span class="bold">J'effectue ou ai pu effectuer ces différentes tâches pour le jeu vidéo Kingdom Of Rhea:</span></br>• Lead Concept Artist: Choix de la charte graphique pour tout le jeu, recherche historique digital (époque, lieu, bâtiments...).</br>• Chef d'équipe artiste 3D: Managment d'une équipe de 5 modélisateurs.</br>• Level Design: Ajouts de contenu sur Unreal Engine et GitHub.</br>• Community Manager : Publications Facebook, Instagram et Twitter.</br>• Infographiste : Création de visuels comme des succès Steam (pictogramme) , bannières et post de réseaux sociaux, modification du logo...</br>• Evènementiel: Présentation et photographies lors des salons Paris Games Week & Virtual Calais.</p>
+								<p><span class="bold">J'effectue ou ai pu effectuer ces différentes tâches pour le jeu vidéo Kingdom Of Rhea:</span></br>- Lead Concept Artist: Choix de la charte graphique pour tout le jeu, recherche historique digital (époque, lieu, bâtiments...).</br>- Chef d'équipe artiste 3D: Managment d'une équipe de 5 modélisateurs.</br>- Level Design: Ajouts de contenu sur Unreal Engine et GitHub.</br>- Community Manager : Publications Facebook, Instagram et Twitter.</br>- Infographiste : Création de visuels comme des succès Steam (pictogramme) , bannières et post de réseaux sociaux, modification du logo...</br>- Evènementiel: Présentation et photographies lors des salons Paris Games Week & Virtual Calais.</p>
 						</div>
 				</div>
 				
