--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="alignement">
 						<div class="date"><li><p class="bold">01/2020 - En cours</br>À distance</p></li></div>
 						<div class="right_text">
-								<p><span class="bold">Développeur Web Junior</span></br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a egestas est, nec eleifend diam. Nam in aliquam mauris. Fusce malesuada consequat fermentum. Sed a lorem tincidunt, sagittis neque ut, tristique dui. Phasellus eu molestie ipsum. Sed nisl magna, suscipit sed ligula eget, eleifend sollicitudin nibh.</p>
+								<p><span class="bold">Développeur Web Junior</span></br>Transformer une maquette graphique en HTML5 et CSS3; ajouter du contenu audio et vidéo en HTML5; animer les pages web avec CSS3 et JavaScript; appliquer les standards du web et les normes en vigueur; construire un site web Responsive s’adaptant à tout type d’écran; améliorer le référencement naturel; se connecter à un service web pour exploiter des données tierces (API); gérer les comptes utilisateurs; concevoir un site maintenable grâce à la gestion des erreurs et exceptions; créer, gérer et afficher le contenu d’une base de données.</p>
 						</div>
 				</div>
 				
