--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="container">
 		<section>
 			<header>
-				<center><img src="Moi.jpg" alt="Photo d'Ambre Vanneuville"></center>
+				<div class="centrer"><img src="Moi.jpg" alt="Photo d'Ambre Vanneuville"></div>
 				<p><h1><span class="Ambre">AMBRE</span> VANNEUVILLE</h1></p>
 				<p><h2>En formation Développeuse Web</h2></p>
 				<hr>
