--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="Style.css">
 		<title>CV de Ambre Vanneuville</title>
+		<meta name="description" content="Exercice Openclassrooms pour la formation de développeur Web, réaliser mon CV en HTML et CSS." />
 		<script src="https://kit.fontawesome.com/84c6d20721.js" crossorigin="anonymous"></script>
 	</head>
 <!------------------------------------------------------------------------------------------------------------>
