--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="container">
 		<section>
 			<header>
-				<div class="centrer"><img src="Moi.jpg" alt="Photo d'Ambre Vanneuville"></div>
+				<div class="img"></div>
 				<h1><span class="Ambre">AMBRE</span> VANNEUVILLE</h1>
 				<h2>En formation Développeuse Web</h2>
 				<hr>
@@ -85,9 +85,7 @@
 <!--********************************************************************************************-->
 		<aside>
 			
-					<div class="img">
-						<img src="Moi.jpg" alt="Photo d'Ambre Vanneuville">
-					</div>
+					<div class="img"><img src="Moi.jpg" alt="Photo d'Ambre Vanneuville"></div>
 			
 								
 				<!-- Aside coordonées + À propos + etc -->
