--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 		<title>CV de Ambre Vanneuville</title>
 		<script src="https://kit.fontawesome.com/84c6d20721.js" crossorigin="anonymous"></script>
 	</head>
-<!------------------------------------------------------------------------------------------------------------>
+<!--************************************************************************-->
 	<body>
 
 	<div id="container">
 		<section>
 			<header>
 				<div class="img"><img src="Moi.jpg" alt="Photo d'Ambre Vanneuville"></div>
-				<p><h1><span class="Ambre">AMBRE</span> VANNEUVILLE</h1></p>
-				<p><h2>En formation Développeuse Web</h2></p>
+				<h1><span class="Ambre">AMBRE</span> VANNEUVILLE</h1>
+				<h2>En formation Développeuse Web</h2>
 				<hr>
 			</header>
 			<!-- article 1 - Formation  -->
@@ -81,7 +81,7 @@
 			</ul></article>
 			
 		</section>
-<!------------------------------------------------------------------------------------------------------------>		
+<!--************************************************************************-->	
 		<aside>
 			
 					<div class="img">
