--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="Style.css">
 		<title>CV de Ambre Vanneuville</title>
+		<meta name=">CV de Ambre Vanneuville" content="Exercice Openclassrooms, réalisation d'un CV en HTML et CSS." />
 		<script src="https://kit.fontawesome.com/84c6d20721.js" crossorigin="anonymous"></script>
 	</head>
 <!--************************************************************************-->
